--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -6,3 +6,10 @@ jobs:
         steps:
             - run: echo "Hello, World!" # shell command
             - uses: actions/checkout@v4 # action (module)
+    print:
+        runs-on: ubuntu-latest
+        steps:
+            - run: |
+                "${{ github.actor}}"
+                "${{ github.run_id }}"
+                "${{ github.event }}"
