--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,8 +12,12 @@ jobs:
                 ref: ${{ env.BRANCH }}
     print:
         runs-on: ubuntu-latest
+        env:
+            ACTOR: ${{ github.actor }}
+            RUN_ID: ${{ github.run_id }}
+            GITHUB_EVENT: ${{ github.event }}
         steps:
             - run: |
-                echo "${{ github.actor }}"
-                echo "${{ github.run_id }}"
-                echo "${{ github.event }}"
+                echo "${ACTOR}"
+                echo "${RUN_ID}"
+                echo "${GITHUB_EVENT}"
