--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,9 +15,9 @@ jobs:
         env:
             ACTOR: ${{ github.actor }}
             RUN_ID: ${{ github.run_id }}
-            GITHUB_EVENT: ${{ github.event }}
+            COMMIT_MESSAGE: ${{ github.event.commits.message }}
         steps:
             - run: |
                 echo "${ACTOR}"
                 echo "${RUN_ID}"
-                echo "${GITHUB_EVENT}"
+                echo "${COMMIT_MESSAGE}"
