--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,9 +15,9 @@ jobs:
         env:
             ACTOR: ${{ github.actor }}
             RUN_ID: ${{ github.run_id }}
-            COMMIT_MESSAGE: ${{ github.event.commits.message }}
+            USERNAME: ${{ vars.USERNAME }}  # ref variables
         steps:
             - run: |
                 echo "${ACTOR}"
                 echo "${RUN_ID}"
-                echo "${COMMIT_MESSAGE}"
+                echo "${USERNAME}"
