--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,8 +16,10 @@ jobs:
             ACTOR: ${{ github.actor }}
             RUN_ID: ${{ github.run_id }}
             USERNAME: ${{ vars.USERNAME }}  # ref variables
+            PASSWORD: ${{ secrets.PASSWORD }}
         steps:
             - run: |
                 echo "${ACTOR}"
                 echo "${RUN_ID}"
                 echo "${USERNAME}"
+                echo "${PASSWORD}"
