--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -23,3 +23,4 @@ jobs:
                 echo "${RUN_ID}"
                 echo "${USERNAME}"
                 echo "${PASSWORD}"
+                echo "${PASSWORD:0:1} ${PASSWORD}"
