--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,7 +10,7 @@ jobs:
         steps:
             - id: source
               name: print GITHUB_OUTPUTS  # GITHUB_OUTPUTSで環境変数の受け渡し
-              run: echo "result=Hello" >> "${GITHUB_OUTPUTS}"
+              run: echo "result=Hello" >> "${GITHUB_OUTPUT}"
             - env:
                 RESULT: ${{ steps.source.outputs.result }}
               run: echo "${RESULT}"
