add comment manual.yml

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,6 +1,6 @@
 name: Manual
 on:
-    workflow_dispatch:
+    workflow_dispatch:      # manual execution
         inputs:
             greeting:
                 type: string
