--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Debug Info
+      run: echo "Running Dockerfile Lint"
     - name: Run Dockerfile lint
       # https://github.com/hadolint/hadolint
       # TODO: find better alternatives?
