--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -1,8 +1,9 @@
 name: Dockerfile Lint
 
 on:
-  pull_request:
-    branches: [ "main" ]
+#   pull_request:
+  push:
+    # branches: [ "main" ]
     paths: ["Dockerfile"]
 
 # Abort the previous running CI workflow in the same pull request
