--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -1,10 +1,10 @@
 name: Dockerfile Lint
 
 on:
-#   pull_request:
-  push:
-    # branches: [ "main" ]
-    paths: ["Dockerfile"]
+  pull_request:
+#   push:
+    branches: [ "main" ]
+    paths: ["**/Dockerfile"]
 
 # Abort the previous running CI workflow in the same pull request
 concurrency:
