--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -3,7 +3,7 @@ name: Dockerfile Lint
 on:
   pull_request:
 #   push:
-    branches: [ "main" ]
+    # branches: [ "main" ]
     paths: ["**/Dockerfile"]
 
 # Abort the previous running CI workflow in the same pull request
