--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -3,8 +3,8 @@ name: Dockerfile Lint
 on:
   pull_request:
 #   push:
-    # branches: [ "main" ]
-    paths: ["**/Dockerfile"]
+    branches: [ "main" ]
+    paths: ['Dockerfile']
 
 # Abort the previous running CI workflow in the same pull request
 concurrency:
