--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 #   push:
     branches: [ "main" ]
-    paths: ['Dockerfile']
+    # paths: ['Dockerfile']
 
 # Abort the previous running CI workflow in the same pull request
 concurrency:
