--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -39,13 +39,13 @@ jobs:
               if: ${{ contains(github.run_id, '1') }}
 
     # comment to PR
-    comment:
-        runs-on: ubuntu-latest
-        permissions:
-            pull-requests: write
-            contents: read
-        steps:
-            - uses: actions/checkout@v4
-            - run: gh pr comment "${GITHUB_HEAD_REF}" --body "Hello, ${GITHUB_ACTOR}!"
-              env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # comment:
+    #     runs-on: ubuntu-latest
+    #     permissions:
+    #         pull-requests: write
+    #         contents: read
+    #     steps:
+    #         - uses: actions/checkout@v4
+    #         - run: gh pr comment "${GITHUB_HEAD_REF}" --body "Hello, ${GITHUB_ACTOR}!"
+    #           env:
+    #             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
