--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,4 @@ updates:
   - package-ecosystem: github-actions # パッケージエコシステム
     directory: /  # パッケージマニュフェストの配置先ディレクトリ ※Github Actionsの場合は`/`固定
     schedule:
-      interval: "daily"
+      interval: daily
