--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,11 @@ updates:
     directory: /  # パッケージマニュフェストの配置先ディレクトリ ※Github Actionsの場合は`/`固定
     schedule:
       interval: daily
+    ignore:
+      - dependency-name: actions/upload-artifact
+        versions:
+          - 4.3.0
+          - 4.3.1
+      - dependency-name: 'actions/*'
+        update-types:
+          - version-update:semver-major
